tests/tooling/fixtures/native/recovery/negative/negative_assignment_parser_missing_bitwise_and_assign_rhs.objc3
// Expected diagnostic code(s): O3P103.
module NegativeAssignmentParserMissingBitwiseAndAssignRhs;

fn main() -> i32 {
  let value = 6;
  value &= ;
  return value;
}
